--- a/conf/config.ini
+++ b/conf/config.ini
@@ -10,6 +10,7 @@ aldawaa=https://www.al-dawaa.com/english/catalogsearch/result/?q=
 faces=https://www.faces.com/sa-en/catalogsearch/result/?q=
 sephora=https://www.sephora.sa/en/search?q=
 boutiqaat=https://www.boutiqaat.com/en-kw/catalogsearch/result/?q=
+asos=https://www.asos.com/search/?page=1&q=
 ounass=https://en-saudi.ounass.com/women?q=
 namshi=https://en-sa.namshi.com/fragrances/?qq=
 
@@ -25,6 +26,7 @@ aldawaa=https://www.al-dawaa.com
 faces=https://www.faces.com
 sephora=https://www.sephora.sa
 boutiqaat=https://www.boutiqaat.com
+asos=https://www.asos.com
 ounass=https://en-saudi.ounass.com
 namshi=https://en-sa.namshi.com
 strawberry=https://www.strawberrynet.com
@@ -42,6 +44,7 @@ aldawaa=ol=class=products list items product-items|li=class=item product product
 faces=ol=class=products list items product-items|li=class=item product product-item
 sephora=ul=id=search-result-items|div=class=product-tile clickable
 boutiqaat=ol=class=products list items product-items|li=class=item product product-item
+asos=div=class=_2MoInDZ|article=class=_2qG85dG
 ounass=div=class=PLP-productList PLP-productList--3|div=class=Product-contents
 namshi=ul=id=catalog_listings|li=class=listing closed
 strawberry=div=class=product-list clearfix list|div=class=prodBlock
@@ -59,6 +62,7 @@ aldawaa=img=class=product-image-photo|strong=class=product name product-item-nam
 faces=img=class=product-image-photo|strong=class=product name product-item-name|a=class=product-item-link|span=class=price
 sephora=div=class=product-image|span=class=title-line title-line-bold|a=class=product-tile-link|span=class=product-min-price
 boutiqaat=img=class=product-image-photo|strong=class=product name product-item-name|strong=class=product name product-item-name|span=class=price
+asos=div=class=_3Lld6NN|div=class=_3J74XsK|a=class=_3TqU78D|span=class=Dy5fJQR
 ounass=img=class=lazy Product-image|div=class=Product-name|a=class=Product-media|span=class=Product-minPrice
 namshi=div=class=image_container|p=class=description|a=class=product_listing_link|p=class=price
 strawberry=img=class=img-fluid col-10|a=class=prod-name|a=class=prod-name|div=class=finalprice
@@ -74,4 +78,4 @@ strawberry=img=class=img-fluid col-10|a=class=prod-name|a=class=prod-name|div=cl
 
 [general_conf]
 min_products=1
-max_products=10
+max_products=4
