--- a/conf/config.ini
+++ b/conf/config.ini
@@ -62,7 +62,7 @@ aldawaa=img=class=product-image-photo|strong=class=product name product-item-nam
 faces=img=class=product-image-photo|strong=class=product name product-item-name|a=class=product-item-link|span=class=price
 sephora=div=class=product-image|span=class=title-line title-line-bold|a=class=product-tile-link|span=class=product-min-price
 boutiqaat=img=class=product-image-photo|strong=class=product name product-item-name|strong=class=product name product-item-name|span=class=price
-asos=div=class=_3Lld6NN|div=class=_3J74XsK|a=class=_3TqU78D|span=class=Dy5fJQR
+asos=div=class=ERlP6Bx|div=class=_3J74XsK|a=class=_3TqU78D|span=class=Dy5fJQR
 ounass=img=class=lazy Product-image|div=class=Product-name|a=class=Product-media|span=class=Product-minPrice
 namshi=div=class=image_container|p=class=description|a=class=product_listing_link|p=class=price
 strawberry=img=class=img-fluid col-10|a=class=prod-name|a=class=prod-name|div=class=finalprice
@@ -78,4 +78,4 @@ strawberry=img=class=img-fluid col-10|a=class=prod-name|a=class=prod-name|div=cl
 
 [general_conf]
 min_products=1
-max_products=4
+max_products=10
